# EECS583-FinalProject

./: CMakeLists.txt  Makefile  README.md  combined_csv_gen  csv_gen  data.csv  data64.csv  dataOriginal.csv  dataSquare.csv  genDifference.py  gen_script  graph_both_algo.py  graph_combined_misses.py  graph_misses.py  graph_mr.py  graph_prime.py  run.sh  script  test_branch  test_code.cpp  test_factor  test_lam  test_lru  test_pass  test_sqrt  theo_graph.py  tiling_pass.cpp
benchmarks/for_loop_deletion/: run.sh  test1.c  test2.c  test3.c  test4.c  test5.c
data_scripts/: graph_gen.py  run_theo.sh  script  test_block  test_theo
tests/: blocked-example.c  make_tests.py  requirements.txt  test-0.c  test-10.c  test-10.txt  test_template.c
tile_pass/: CMakeLists.txt  tiling_pass.cpp
tilingpass/: CMakeLists.txt  Makefile  tiling_pass.cpp
tilingpass_branch/: CMakeLists.txt  tiling_pass.cpp
tilingpass_branchless/: CMakeLists.txt  tiling_pass.cpp
tilingpass_factor/: CMakeLists.txt  tiling_pass.cpp
tilingpass_lam/: CMakeLists.txt  tiling_pass.cpp
tilingpass_lru/: CMakeLists.txt  tiling_pass.cpp
tilingpass_original/: CMakeLists.txt  tiling_pass.cpp
tilingpass_sqrt/: CMakeLists.txt  tiling_pass.cpp
tilingpass_theo/: CMakeLists.txt  tiling_pass.cpp
tmp/: test.c  test.ll
